%% Appendix J: Full Entity Relationship Diagram (all 14 tables).
%% The core-entity subset used in the report body (6.4.1) is erd.mmd.
%% Source of truth: server/src/database/schema/*.ts
erDiagram
    USERS ||--o{ SESSIONS : "logs in via"
    USERS ||--o{ PASSWORD_RESETS : "requests"
    USERS ||--o{ CAMPAIGNS : "owns"
    USERS ||--o{ DONATIONS : "makes"
    USERS ||--o{ FUNDRAISER_APPLICATIONS : "submits"
    USERS ||--o{ REWARD_EVENTS : "earns"
    USERS ||--o{ DISBURSEMENT_APPROVALS : "decides"
    USERS ||--o{ NOTIFICATIONS : "receives"
    USERS ||--o{ AUDIT_LOGS : "performs"
    USERS ||--o{ BENEFICIARIES : "verifies"
    USERS ||--o{ DISBURSEMENTS : "initiates"

    CAMPAIGNS ||--o{ DONATIONS : "receives"
    CAMPAIGNS ||--o{ BENEFICIARIES : "supports"
    CAMPAIGNS ||--o{ DISBURSEMENTS : "funds"
    CAMPAIGNS ||--o{ PAYMENT_TRANSACTIONS : "targets"

    PAYMENT_TRANSACTIONS ||--o| DONATIONS : "produces on success"
    DONATIONS ||--o| BLOCKCHAIN_RECORDS : "proven by"
    DONATIONS ||--o{ REWARD_EVENTS : "triggers"

    BENEFICIARIES ||--o{ DISBURSEMENTS : "receives"
    DISBURSEMENTS ||--o{ DISBURSEMENT_APPROVALS : "requires"
    DISBURSEMENTS ||--o| BLOCKCHAIN_RECORDS : "proven by"

    USERS {
        bigint id PK
        varchar full_name
        varchar email UK
        varchar phone
        text password_hash
        enum role "donor, fundraiser, admin"
        enum status "active, suspended, deactivated"
        timestamp deleted_at "soft delete"
    }

    SESSIONS {
        bigint id PK
        bigint user_id FK
        varchar token_hash "SHA-256 of refresh token"
        text user_agent
        boolean persistent "remember-me"
        timestamp expires_at
        timestamp revoked_at
    }

    PASSWORD_RESETS {
        bigint id PK
        bigint user_id FK
        varchar token_hash "SHA-256, single use"
        timestamp expires_at "1 hour"
        timestamp used_at
    }

    CAMPAIGNS {
        bigint id PK
        varchar title
        text description
        bigint owner_id FK "null for NGO-run"
        enum status
        enum category
        timestamp start_date
        timestamp end_date
        boolean featured
    }

    FUNDRAISER_APPLICATIONS {
        bigint id PK
        bigint user_id FK
        varchar display_name
        text cause_description
        enum status "pending, approved, rejected"
        bigint reviewed_by FK
    }

    DONATIONS {
        bigint id PK
        bigint donor_id FK
        bigint campaign_id FK
        numeric amount
        varchar currency "TZS"
        varchar payment_reference UK
        varchar receipt_number UK
        timestamp created_at "immutable, no updated_at"
    }

    PAYMENT_TRANSACTIONS {
        bigint id PK
        varchar reference UK
        bigint donor_id FK
        bigint campaign_id FK
        bigint donation_id FK "set on success"
        varchar provider
        enum status
        enum method "mobile_money, bank"
        jsonb provider_response
        timestamp expires_at
    }

    BENEFICIARIES {
        bigint id PK
        bigint campaign_id FK
        varchar name
        varchar category
        varchar location
        boolean verified
        bigint verified_by FK
    }

    DISBURSEMENTS {
        bigint id PK
        bigint campaign_id FK
        bigint beneficiary_id FK
        numeric amount
        text purpose
        enum status
        boolean self_released "below threshold"
        varchar payout_reference
        bigint initiated_by FK
        timestamp completed_at
    }

    DISBURSEMENT_APPROVALS {
        bigint id PK
        bigint disbursement_id FK
        bigint admin_id FK
        enum decision "approved, rejected"
        text reason
    }

    BLOCKCHAIN_RECORDS {
        bigint id PK
        bigint donation_id FK "polymorphic, one of"
        bigint disbursement_id FK "polymorphic, one of"
        varchar tx_hash
        varchar network "sepolia"
        enum status "pending, confirmed, failed"
        timestamp recorded_at
    }

    NOTIFICATIONS {
        bigint id PK
        bigint user_id FK
        enum type
        varchar title
        text message
        text link
        boolean read
    }

    AUDIT_LOGS {
        bigint id PK
        bigint user_id FK
        varchar action "e.g. disbursement.approve"
        varchar entity_type
        bigint entity_id
        jsonb details
    }

    REWARD_EVENTS {
        bigint id PK
        bigint user_id FK
        bigint donation_id FK
        enum type "donation, first_donation, new_campaign"
        bigint points
        text description
    }
